--- a/AINoteTakingApp/Info.plist
+++ b/AINoteTakingApp/Info.plist
@@ -76,6 +76,8 @@
 	<string>This app can integrate with your calendar to create meeting notes and context-aware suggestions.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app uses location to provide context-aware note suggestions based on your current location.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app needs access to the local network to connect to your backend server for syncing notes and data.</string>
 	
 	<!-- CloudKit Configuration -->
 	<key>CKSharingSupported</key>
